commenting out list of font names

--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
     font-family: 'Libre Franklin', sans-serif;
 }
 
-font-family: 'Libre Franklin', sans-serif;
+/* font-family: 'Libre Franklin', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
 font-family: 'Roboto', sans-serif;
-font-family: 'Titillium Web', sans-serif;
+font-family: 'Titillium Web', sans-serif; */
 
 a {
     display: flex;
